fixed button cursor, fixed vsh for siingle pin when in dark mode

--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -120,6 +120,7 @@ nav {
   padding-left: 20px;
   padding-right: 20px;
   justify-content: center;
+  width: 100px;
   align-items: center;
   margin-top: 5px;
   border: 2px #1c6e8c solid;
