--- a/frontend/src/components/UserHome/UserHome.css
+++ b/frontend/src/components/UserHome/UserHome.css
@@ -66,7 +66,7 @@
   border-radius: 25px;
   /* border: 2px solid black; */
   text-decoration: none;
-  background-color: rgba(255, 255, 255, 0.761);
+  background-color: rgba(255, 255, 255, 0.952);
   box-shadow: 0 0 10px 2px #1c6e8c;
 }
 
